<resources>
    <string name="app_name">TD2</string>
    <string name="message">Salut tout le monde</string>
    <string name="mot_de_passe">Mot de Passe</string>
    <string name="entree">Entrée</string>
    <string name="plat">Plat</string>
    <string name="midi">Midi</string>
    <string name="soir">Soir</string>
    <string name="fromage">Fromage</string>
    <string name="fruit">Fruit</string>
    <string name="entree_label">Qu\'avez vous mangé en entrée ?</string>
    <string name="plat_label">Qu\'avez vous mangé en plat ?</string>
    <string name="validate">Valider</string>
    <string name="cancel">Annuler</string>
    <string name="dessert_label">Selectionnez ce que vous avez mangé :</string>
    <string name="moment">A quel moment de la journée ?</string>
    <string name="temperature">Température</string>
    <string name="vent">Vitesse du vent</string>
    <string-array name="temps">
        <item>"Dégagé"</item>
        <item>"Couvert"</item>
        <item>"Pluvieux"</item>
    </string-array>
</resources>